# cf-invariants-jito

./: .gitignore  NOTICE  README.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml
references/jito_tipdist_ref/fuzz/jito_admin_gating/: Cargo.toml
references/jito_tipdist_ref/fuzz/jito_no_double_claim/src/: main.rs
references/jito_tipdist_ref_planted_admin_gating/: Cargo.toml
references/jito_tipdist_ref_planted_admin_gating/fuzz/jito_admin_gating/crashes/invariant_update_config_requires_authority/: 00026939f7f93d78  000365d16c7ee23b  000ea4e2f3daaf5b  001278b70ff8ada4  00141e7bace98f58  0014fe8c0322e9b2  00152a8fabc8ebaa  0016918a5e6704e4  0017173d6a73f1d6  001936e0f774c8c7  002f4b2236c58fb5  0030bacb850458d2  00341bd1b1cd1ebe  003cbbdcfb8db203  003d0a6eb0abf546  0042cc1757afe45b  00430dfc7e40fd20  0044881ea9598f08  00454d98c0b857c1  00554d66afd77bce  0056e58a69ac699a  005b389e0fec464d  005c20d058c50472  005c24588e0e9add  0062287332d25f44  006c972429f82797  006d3aace065130c  006d7eb375a7d7ec  0075a52d288b8c42  0079fc3ab7888274  0082df9c5cd811c7  008e69f62686185b  009004d44edec9a0  00914b0c00120d5d  00a41d3149d87ceb  00a746b6b72b3ece  00aa05746d794b84  00b7d791a1935b1b  00b93d840f017542  00bae08b30108aa9  (+50530 more)
references/jito_tipdist_ref_planted_admin_gating/fuzz/jito_admin_gating/src/: main.rs
references/jito_tipdist_ref_planted_admin_gating/fuzz/jito_no_double_claim/: Cargo.toml
references/jito_tipdist_ref_planted_admin_gating/fuzz/jito_no_double_claim/src/: main.rs
references/jito_tipdist_ref_planted_admin_gating/programs/tip-distribution/src/: lib.rs  merkle_proof.rs
references/jito_tipdist_ref_planted_claim_conservation/fuzz/jito_claim_conservation/crashes/invariant_claim_amount_conservation/: crash_035a5670cd58cdc0.meta.json  crash_2086c65c91eee243.meta.json  crash_718faedfff7342f7.meta.json  crash_7ea3f743cde40843.meta.json  crash_8ecfd5a9f8f09271.meta.json  crash_9c3cb22615ab38ae.meta.json  crash_9c566d482b015e8d.meta.json  crash_d80f20e891ab9796.meta.json
references/jito_tipdist_ref_planted_claim_conservation/fuzz/jito_merkle_authority/src/: main.rs
references/jito_tipdist_ref_planted_claim_conservation/programs/tip-distribution/: Cargo.toml
references/jito_tipdist_ref_planted_claim_conservation/programs/tip-distribution/src/: state.rs
references/jito_tipdist_ref_planted_merkle_authority/fuzz/jito_claim_conservation/: Cargo.toml
references/jito_tipdist_ref_planted_merkle_authority/fuzz/jito_claim_conservation/src/: main.rs
references/jito_tipdist_ref_planted_merkle_authority/fuzz/jito_merkle_authority/: Cargo.toml
references/jito_tipdist_ref_planted_merkle_authority/fuzz/jito_merkle_authority/crashes/invariant_merkle_proof_required/: 0016a9c0451bd164  001d66e41433fecb  0023cae0eb61bc8f  00264a182dccbee7  0027b52e2833f01a  002efa531f77ba2a  003453d3cde7051b  0035f3e3aca4d161  003805f1c9bb4f38  0038c839398d6dd1  0045e69cb40a576a  004a92eccd3cd093  005137de4533f74d  0051775694e91b56  0071af82ea3e9442  0075ce685549c3bb  007cead82b571948  007edc7296fc7942  0096518d82659bcd  0098a439e864c949  009c259c8ce65fee  00a37c0352ac1515  00a62d55da3ffe52  00ace8543cbfdd6e  00ae1581093478af  00c065c0a4b588b6  00d8cd7ae5081bdc  00d93f88ee33b175  00e9373c68fd8ba1  00f410cb6e1ffa37  00f458e4755fdc52  00feb6e0aba975aa  010e5bc8237835e9  0117d65935f3cb08  012720f9259753c8  012afdb6a075bcbd  0132c25c0c56495e  013371c27bce6b1e  013eebdf524ff89d  01414e50bfc34302  (+44495 more)
references/jito_tipdist_ref_planted_merkle_authority/programs/tip-distribution/src/: lib.rs  merkle_proof.rs
references/jito_tipdist_ref_planted_no_double_claim/.github/workflows/: ci.yml
references/jito_tipdist_ref_planted_no_double_claim/fuzz/jito_claim_conservation/src/: main.rs
references/jito_tipdist_ref_planted_no_double_claim/fuzz/jito_no_double_claim/crashes/invariant_no_double_claim/: crash_035a5670cd58cdc0.meta.json  crash_2086c65c91eee243.meta.json  crash_7ea3f743cde40843.meta.json  crash_8ecfd5a9f8f09271.meta.json  crash_9c3cb22615ab38ae.meta.json  crash_9c566d482b015e8d.meta.json  crash_d80f20e891ab9796.meta.json
references/jito_tipdist_ref_planted_no_double_claim/programs/tip-distribution/: Cargo.toml
references/jito_tipdist_ref_planted_no_double_claim/programs/tip-distribution/src/: lib.rs
