[package]
name = "jito_admin_gating_fuzz"
version = "0.1.0"
edition = "2021"
description = "Crucible fuzz harness for jito_tipdist_ref — admin_gating invariant on update_config."
license = "Apache-2.0"

[workspace]

[dependencies]
# Pinned to upstream Crucible v0.2.0. Path deps assume the Crucible
# clone lives at `../../../../../crucible` (sibling-to-repo-root in CI;
# the cf-invariants-anchor workflow uses the same convention).
crucible-fuzzer       = { path = "../../../../../crucible/crates/crucible-fuzzer" }
crucible-test-context = { path = "../../../../../crucible/crates/crucible-test-context" }
anchor-lang = "=1.0.1"
arbitrary = { version = "1", features = ["derive"] }
ctrlc = "3.4"
libafl = { version = "0.15.1", features = ["std", "cli", "prelude"] }
libafl_bolts = { version = "0.15.1", features = ["std"] }
jito-tip-distribution = { path = "../../programs/tip-distribution", features = ["no-entrypoint"] }
solana-keypair = "3.0"
solana-pubkey = "3.0"
solana-signer = "3.0"

[[bin]]
name = "invariant_test"
path = "src/main.rs"

[features]
invariant_update_config_requires_authority = []
